--- a/Week02/Day-03/typescript.html
+++ b/Week02/Day-03/typescript.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <canvas width="600" height="400" class="main-canvas"></canvas>
-    <script type="text/typescript" src="horizontal-lines.ts"></script>
+    <script type="text/typescript" src="purple-steps-ts.ts"></script>
     
     
     <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
