--- a/Week02/Day-05/drawing-project.html
+++ b/Week02/Day-05/drawing-project.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Drawing</title>
+    <title>Drawing Project!</title>
     <style>
       .main-canvas {
         margin: 20px;
@@ -12,8 +12,8 @@
     </style>
   </head>
   <body>
-    <canvas width="600" height="400" class="main-canvas"></canvas>
-    <script type="text/typescript" src="rainbow-box-function-ts.ts"></script>
+    <canvas width="600" height="600" class="main-canvas"></canvas>
+    <script type="text/typescript" src="mega-triangle.ts"></script>
     
     
     <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
