--- a/Week02/Day-05/drawing-project.html
+++ b/Week02/Day-05/drawing-project.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <canvas width="600" height="600" class="main-canvas"></canvas>
-    <script type="text/typescript" src="mega-triangle.ts"></script>
+    <script type="text/typescript" src="line-play.ts"></script>
     
     
     <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
