--- a/Week02/Day-03/typescript.html
+++ b/Week02/Day-03/typescript.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <canvas width="600" height="400" class="main-canvas"></canvas>
-    <script type="text/typescript" src="rainbow-box-function-ts.ts"></script>
+    <script type="text/typescript" src="starry-night-ts.ts"></script>
     
     
     <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
