add(feat) button click highlight is not there anymore

--- a/Week08/Day-03/rounded-buttons/index.html
+++ b/Week08/Day-03/rounded-buttons/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <button class="first button">Jani, te csak ne mondogassál meg nekem semmit se!</button>
     <button class="second button">Különben lenyomom ezt a gombot,</button>
-    <button class="third button">És leshetsz aranyapám</button>
+    <button class="third button">És leshetsz aranyapám (de azért köszi!)</button>
 </div>
 </body>
 </html>
