add(effect) hover effect finished. Buttons finished

--- a/Week08/Day-03/labeled-buttons/index.html
+++ b/Week08/Day-03/labeled-buttons/index.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
   <div class="container">
-    <button class="trash"><i class="far fa-trash-alt"></i></button>
-    <button class="check"><i class="fas fa-check"></i></i></button>
+    <div class="trash">
+      <button data-action="delete"><i class="far fa-trash-alt"></i></button>
+      <div class="delete-sign">Delete</div>
+    </div>
+    <div class="check">
+      <button data-action="confirm"><i class="fas fa-check"></i></i></button>
+      <div class="confirm-sign">Sure?</div>
+    </div>
   </div>
 </body>
 </html>
