html file ready

--- a/Week08/Day-04/button-disabled/index.html
+++ b/Week08/Day-04/button-disabled/index.html
@@ -19,6 +19,19 @@
         <label for="viktor">Viktor the goldfish</label>
       </div>
     </div>
+    <div>
+      <h2>Do you want to sign up for cat facts?</h2>
+      <div>
+        <input type="radio" name="yes_button" id="yes">
+        <label for="yes">YES</label>
+        <input type="radio" name="no_button" id="no">
+        <label for="no">NO</label>
+      </div>
+    </div>
+    <div>
+      <button>I love cats</button>
+      <button>Sign Up</button>
+    </div>
   </form>
   <script src="script.js"></script>
 </body>
