cat fact button enabling is working

--- a/Week08/Day-04/button-disabled/index.html
+++ b/Week08/Day-04/button-disabled/index.html
@@ -22,7 +22,7 @@
     </div>
     <div>
       <h2>Do you want to sign up for cat facts?</h2>
-      <div>
+      <div class="catFactButtons">
         <input type="radio" name="yesorno_button" id="yes">
         <label for="yes">YES</label>
         <input type="radio" name="yesorno_button" id="no">
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div>
-      <button class="firstButton" disabled>I love cats</button>
+      <button class="loveCatsButton" disabled>I love cats</button>
       <button class="signupButton" disabled>Sign Up</button>
     </div>
   </form>
