classes added to movies

--- a/Week08/Day-04/movie-selector/index.html
+++ b/Week08/Day-04/movie-selector/index.html
@@ -23,18 +23,19 @@
       <div>
         <select name="movie_titles" id="movies">
           <option value="" disabled selected>Select a movie</option>
-          <option value="moon">Moon</option>
-          <option value="2001_space_odessy">2001 Space odessy</option>
-          <option value="contact">Contact</option>
-          <option value="darkest_hour">Darkest hour</option>
-          <option value="there_will_be_blood">There will be blood</option>
-          <option value="american_beauty">American beauty</option>
-          <option value="airplane">Airplane!</option>
-          <option value="deadpool">Deadpool</option>
-          <option value="waynes_world">Wayne's World</option>
+          <option class="sci-fi" disabled value="moon">Moon</option>
+          <option class="sci-fi" disabled value="2001_space_odessy">2001 Space odessy</option>
+          <option class="sci-fi" disabled value="contact">Contact</option>
+          <option class="drama" disabled value="darkest_hour">Darkest hour</option>
+          <option class="drama" disabled value="there_will_be_blood">There will be blood</option>
+          <option class="drama" disabled value="american_beauty">American beauty</option>
+          <option class="comedy" disabled value="airplane">Airplane!</option>
+          <option class="comedy" disabled value="deadpool">Deadpool</option>
+          <option class="comedy" disabled value="waynes_world">Wayne's World</option>
         </select>
       </div>
     </div>
+    <h2>The selected movie is: -</h2>
   </form>
 </body>
 </html>
