--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -12,8 +12,11 @@
   <div id = 'header'>
     <img src="./assets/ne0213-last-hubble-mission.jpg" id = 'headerImg'>
     <img src="./assets/stanley-nba.jpg" id = "headerLogo">
+    <h2>NBA SUMMER WORKOUT</h2>
   </div>
-  <table id = table>
-  </table>
+  <div>
+    <table id = table>
+    </table>
+  </div>
 </body>
 </html>
