submit new post button redirects

--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -18,7 +18,7 @@
     <div id="postList"></div>
     <div id="submit-about-box">
       <div id="submit">
-        <button type="submit" id="submit-button">SUBMIT A NEW POST</button>
+        <button id="submitNewPost">SUBMIT A NEW POST</button>
       </div>
       <div id="about-us-content">
         <h3>ABOUT</h3>
