--- a/Week07/Day-04/reddit-project/updatepost.html
+++ b/Week07/Day-04/reddit-project/updatepost.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/newpostStyles.css">
-  <title>New Post Bro!</title>
+  <title>Update it Bro!</title>
 </head>
 <body>
     <div id = 'header'>
