updating is ready

--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -7,11 +7,11 @@
   <title>Reddit Bro!</title>
   <script src = 'assets/script.js'></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/style.css" type= "text/css">
+  <link rel="stylesheet" href="/assets/style.css" type= "text/css">
 </head>
 <body>
   <div id = 'header'>
-    <img src="./assets/stanley-nba.jpg" id = "headerLogo">
+    <img src="/assets/stanley-nba.jpg" id = "headerLogo">
     <h2>NBA SUMMER WORKOUT</h2>
   </div>
   <div id="full-content">
