--- a/Week07/Day-04/reddit-project/newpost.html
+++ b/Week07/Day-04/reddit-project/newpost.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./assets/newpostStyles.css">
+  <link rel="stylesheet" href="/assets/newpostStyles.css">
   <title>New Post Bro!</title>
 </head>
 <body>
     <div id = 'header'>
-        <img src="./assets/stanley-nba.jpg" id = "headerLogo">
+        <img src="/assets/stanley-nba.jpg" id = "headerLogo">
         <h2>NBA SUMMER WORKOUT</h2>
     </div>
     <div id="submit-form">
