--- a/Week07/Day-04/reddit-project/updatepost.html
+++ b/Week07/Day-04/reddit-project/updatepost.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./assets/newpostStyles.css">
+  <link rel="stylesheet" href="/assets/newpostStyles.css">
+  <script src="/assets/update-script.js"></script>
   <title>Update it Bro!</title>
 </head>
 <body>
     <div id = 'header'>
-        <img src="./assets/stanley-nba.jpg" id = "headerLogo">
+        <img src="/assets/stanley-nba.jpg" id = "headerLogo">
         <h2>NBA SUMMER WORKOUT</h2>
     </div>
     <div id="submit-form">
-      <form action="http://localhost:8080/posts/req.body.id" method="PUT" enctype="application/json">
+      <form action="" method="POST" enctype="application/json">
         <div>
           <h2>UPDATE YOUR POST</h2>
         </div>  
@@ -26,7 +27,7 @@
           <input class="input-field" type="url" id="post_url" name="url" placeholder="https://.......">
         </div>
         <div>
-          <button type="submit" class="updateBtn" onclick="location.href='http://localhost:8080'">Update</button>
+          <button type="submit" class="updateBtn">Update</button>
         </div>
     </div>
 </body>
