clicking the logo redirects to homepage and new styling

--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id = 'header'>
-    <img src="/assets/stanley-nba.jpg" id = "headerLogo">
+    <img src="/assets/stanley-nba.jpg" id = "headerLogo" onclick="location.href='http://localhost:8080'">
     <h2>NBA SUMMER WORKOUT</h2>
   </div>
   <div id="full-content">
