bouncing feature is added

--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -27,9 +27,13 @@
             <li>On this amazing site you can find out how the best of the best is preparing for the season</li>
             <p>---------------------------------</p>
             <li>NBA stars let you peak into their routine during the summer</li>
+            <p>---------------------------------</p>
+            <li>And you can BOUNCE!!!</li>
           </ul>
         </div>
       </div>
+      <div class="basketball" id="basketball"></div>
+      <button class="bounce">BOUNCE</button>
     </div>
   </div>
 </body>
