bounce counter is added

--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -20,6 +20,9 @@
       <div id="submit">
         <button id="submitNewPost">SUBMIT A NEW POST</button>
       </div>
+      <div class="bounceCounter">Bounce mothafucka: <div class="bounceNum"></div></div>
+      <div class="basketball" id="basketball"></div>
+      <button class="bounceBtn">BOUNCE</button>
       <div id="about-us-content">
         <h3>ABOUT</h3>
         <div id="about-us-text">
@@ -32,8 +35,6 @@
           </ul>
         </div>
       </div>
-      <div class="basketball" id="basketball"></div>
-      <button class="bounce">BOUNCE</button>
     </div>
   </div>
 </body>
