sound files in one folder plus video is added to site

--- a/Week07/Day-04/reddit-project/index.html
+++ b/Week07/Day-04/reddit-project/index.html
@@ -13,6 +13,10 @@
   <div id = 'header'>
     <img src="/assets/stanley-nba.jpg" id = "headerLogo" onclick="location.href='http://localhost:8080'">
     <h2>NBA SUMMER WORKOUT</h2>
+    <video id="welcome-video" width="480" height="360" controls>
+        <source src="/assets/IMG_7259.TRIM.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
   <div id="full-content">
     <div id="postList"></div>
