script file created, checks if the answer is correct

--- a/Week09/Day-04/quiz-app/index.html
+++ b/Week09/Day-04/quiz-app/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="./assets/script.js"></script>
+  <link rel="stylesheet" href="./assets/styles.css">
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello</h1>
+    <h1>Score: </h1><h1 id="score-number">0</h1>
+    <form action="">
+      <div id="current-question"></div>
+      <button class="quiz-button" id="firstAns-button"></button>
+      <button class="quiz-button" id="secondAns-button"></button>
+      <button class="quiz-button" id="thirdAns-button"></button>
+      <button class="quiz-button" id="fourthAns-button"></button>
+    </form>
+    <a href="">Manage questions</a>
 </body>
 </html>
