score counter and reset button works

--- a/Week09/Day-04/quiz-app/index.html
+++ b/Week09/Day-04/quiz-app/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-    <h1>Score: </h1><h1 id="score-number">0</h1>
+    <h1>Score: </h1><h1 id="score-number"></h1>
     <form action="">
       <div id="current-question"></div>
       <button class="quiz-button" id="firstAns-button"></button>
@@ -17,6 +17,7 @@
       <button class="quiz-button" id="thirdAns-button"></button>
       <button class="quiz-button" id="fourthAns-button"></button>
     </form>
+    <button id="reset-button">Reset Score</button>
     <a href="">Manage questions</a>
 </body>
 </html>
