delete function working with immediate delete from page

--- a/Week09/Day-04/quiz-app/index.html
+++ b/Week09/Day-04/quiz-app/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="./assets/script.js"></script>
-  <link rel="stylesheet" href="./assets/styles.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./assets/css/styles.css">
+  <title>Quiz Show!!</title>
 </head>
 <body>
     <h1>Score: </h1><h1 id="score-number"></h1>
@@ -18,6 +18,6 @@
       <button class="quiz-button" id="fourthAns-button"></button>
     </form>
     <button id="reset-button">Reset Score</button>
-    <a href="">Manage questions</a>
+    <a href="./assets/questions.html">Manage questions</a>
 </body>
 </html>
