new question form created

--- a/Week09/Day-04/quiz-app/assets/questions.html
+++ b/Week09/Day-04/quiz-app/assets/questions.html
@@ -10,7 +10,36 @@
 </head>
 <body>
   <div id="main-content">
-    <h1>Manage Questions</h1>
-  </div>
+    <div id="all-questions">
+      <h1>Manage Questions</h1>
+    </div>
+    <div id="creation-box">
+      <form action="">
+        <h1>Create a new question</h1>
+        <input type="text" id="question-input" name="new-question" placeholder="Type your question here">
+        <h3>Answers</h3>
+        <div id="field1">
+          <h3>#1</h3>
+          <input type="text" id="first-answer" placeholder="Type your answer here">
+          <input type="radio" name="new-answer">
+        </div>
+        <div id="field2">
+            <h3>#2</h3>
+            <input type="text" id="second-answer" placeholder="Type your answer here">
+            <input type="radio" name="new-answer">
+        </div>
+        <div id="field3">
+            <h3>#3</h3>
+            <input type="text" id="third-answer" placeholder="Type your answer here">
+            <input type="radio" name="new-answer">
+        </div>
+        <div id="field4">
+            <h3>#4</h3>
+            <input type="text" id="fourth-answer" placeholder="Type your answer here">
+            <input type="radio" name="new-answer">
+        </div>
+      </form>
+    </div>
+</div>
 </body>
 </html>
