inserting on server side works

--- a/Week09/Day-04/quiz-app/assets/questions.html
+++ b/Week09/Day-04/quiz-app/assets/questions.html
@@ -38,6 +38,7 @@
             <input type="text" id="fourth-answer" placeholder="Type your answer here">
             <input type="radio" name="new-answer">
         </div>
+        <button>Submit</button>
       </form>
     </div>
 </div>
