--- a/Week09/Day-04/quiz-app/assets/questions.html
+++ b/Week09/Day-04/quiz-app/assets/questions.html
@@ -14,31 +14,31 @@
       <h1>Manage Questions</h1>
     </div>
     <div id="creation-box">
-      <form action="">
+      <form action="http://localhost:8080/questions" method="POST" enctype="application/json">
         <h1>Create a new question</h1>
-        <input type="text" id="question-input" name="new-question" placeholder="Type your question here">
+        <input type="text" id="question-input" name="new_question" placeholder="Type your question here">
         <h3>Answers</h3>
         <div id="field1">
           <h3>#1</h3>
-          <input type="text" id="first-answer" placeholder="Type your answer here">
-          <input type="radio" name="new-answer">
+          <input type="text" name="answer1" id="first-answer" placeholder="Type your answer here">
+          <input type="radio" name="new_answer" value="radio1">
         </div>
         <div id="field2">
             <h3>#2</h3>
-            <input type="text" id="second-answer" placeholder="Type your answer here">
-            <input type="radio" name="new-answer">
+            <input type="text" name="answer2" id="second-answer" placeholder="Type your answer here">
+            <input type="radio" name="new_answer" value="radio2">
         </div>
         <div id="field3">
             <h3>#3</h3>
-            <input type="text" id="third-answer" placeholder="Type your answer here">
-            <input type="radio" name="new-answer">
+            <input type="text" name="answer3" id="third-answer" placeholder="Type your answer here">
+            <input type="radio" name="new_answer" value="radio3">
         </div>
         <div id="field4">
             <h3>#4</h3>
-            <input type="text" id="fourth-answer" placeholder="Type your answer here">
-            <input type="radio" name="new-answer">
+            <input type="text" name="answer4" id="fourth-answer" placeholder="Type your answer here">
+            <input type="radio" name="new_answer" value="radio4">
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
 </div>
